--- a/TWJieShuQuan/main.storyboard
+++ b/TWJieShuQuan/main.storyboard
@@ -492,6 +492,44 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="calibratedRGB"/>
+                        <view key="tableFooterView" contentMode="scaleToFill" id="acU-bV-aDv">
+                            <rect key="frame" x="0.0" y="217" width="600" height="298"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="特别感谢" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yvV-Tu-FiP">
+                                    <rect key="frame" x="266" y="25" width="68" height="21"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wvq-jU-qco">
+                                    <rect key="frame" x="240" y="54" width="121" height="218"/>
+                                    <string key="text">BA:
+     Jingqiang Zhang
+iOS Dev:
+     Jianing Zheng
+     Haibin Hai
+Android Dev:
+     Shuai Zhang
+     Lei Huang
+     Dengwu Wang
+QA:
+     Wuyi Qin
+Other:
+     Yu Gao</string>
+                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
+                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstItem="Wvq-jU-qco" firstAttribute="top" secondItem="yvV-Tu-FiP" secondAttribute="bottom" constant="8" id="aiI-Gn-P7B"/>
+                                <constraint firstAttribute="centerX" secondItem="Wvq-jU-qco" secondAttribute="centerX" id="iY9-nK-2vE"/>
+                                <constraint firstItem="yvV-Tu-FiP" firstAttribute="top" secondItem="acU-bV-aDv" secondAttribute="top" constant="25" id="nYZ-YV-7G1"/>
+                                <constraint firstAttribute="centerX" secondItem="yvV-Tu-FiP" secondAttribute="centerX" id="xuu-g8-Yxu"/>
+                            </constraints>
+                        </view>
                         <sections>
                             <tableViewSection footerTitle="" id="GB9-Vb-yy1">
                                 <cells>
