--- a/TWJieShuQuan/main.storyboard
+++ b/TWJieShuQuan/main.storyboard
@@ -17,7 +17,19 @@
                     <view key="view" contentMode="scaleToFill" id="v3Q-2T-cjt">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="当前页面正在施工中..." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I1L-EX-Ntp">
+                                <rect key="frame" x="216" y="289" width="168" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="I1L-EX-Ntp" secondAttribute="centerX" id="c9d-i4-sB8"/>
+                            <constraint firstAttribute="centerY" secondItem="I1L-EX-Ntp" secondAttribute="centerY" id="jti-Yo-yye"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="同事" id="fpJ-ta-Oe0"/>
                 </viewController>
